integration of gateway, new firmware and new telemetry history endpoint
